@@ -26,6 +26,7 @@ core 2.2.0 - not released yet
 	* Added: Initialize fake console element to prevent errors on console.log() in not supporting browsers
 	* Added: Todoyu.Helper.cloneObject() for deep object copy (alternative to Object.clone())
 	* Added: Javascript form submit helpers (simple file upload)
+	* Added: TodoyuRenderer::renderSelectGrouped(). Extracted from a dwoo plugin
 	* Changed: Unified method naming - getDateXXX() getPersonXXX() getPersonXXXID()
 	* Changed: Renamed TodoyuFieldset to TodoyuFormFieldset
 	* Changed: Prevent selection of disabled select option
